# cpp-math-essentials

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: BoundingBox.hpp  Matrix.hpp  Ray.hpp  Vector.hpp
tests/: CMakeLists.txt  test_aabb.cpp  test_obb.cpp  test_raycast.cpp
